--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "82d07e59-7cd9-48a4-8f58-b148ad7eaa78"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
